--- a/习题/20250526.tex
+++ b/习题/20250526.tex
@@ -90,6 +90,10 @@
 \end{equation*}
 所以不连续,也不可导(不在$\mathbb{R}$上可微)
 
+\textbf{更正:C}
+D.可导不一定指的是可微分
+C.(1)连续性代入$y=x$. (2)可偏导和可微分用定义
+
 \subsubsection{选择题3}
 选\textbf{B} \\
 画图,得到范围
@@ -117,6 +121,7 @@ a_{n}=,
 b_{n}=0
 \end{aligned}
 \end{equation*}
+看傅立叶级数的敛散性
 
 \newpage
 
@@ -125,6 +130,7 @@ b_{n}=0
 \begin{equation*}
 (1,1,-1)\times(2,0,-1) =(-1,-1,-2)
 \end{equation*}
+更正:$k\{1,1,2\}(k\neq0)$
 
 \subsubsection{填空题2}
 \textbf{$e^{x+y}\sin y \cdot dx + e^{x+y} (\sin y + \cos y ) \cdot dy$}
@@ -160,8 +166,10 @@ b_{n}=0
 \subsubsection{客观题1}
 \begin{eqnarray*}
 	\frac{\partial z}{\partial x}=f_{1}+f_{2}y \\
-	\frac{\partial z}{\partial x\partial y}=f_{11}+f_{12}x+f_{21}y+f_{22}xy+f_{2}
+	\frac{\partial ^{2} z}{\partial x\partial y}=f_{11}+f_{12}x+f_{21}y+f_{22}xy+f_{2}
 \end{eqnarray*}
+
+$$\frac{\partial^2z}{\partial x\partial y}=f_{11}+xf_{12}+f_{2}+y[f_{21}+xf_{22}]=f_{11}+f_{2}+(x+y)f_{12}+xyf_{22}$$也行
 
 \subsubsection{客观题2}
 这是一个很显然的转变积分区域的题目,可以由\begin{equation*}
@@ -193,11 +201,13 @@ $$\because(y)^{\prime}_y=(x)^{\prime}_y$$,我们可以知道其路径无关. \\
 	=5\end{aligned}
 \end{equation*}
 
+或者直接用参数化直线来做
+
 \subsubsection{客观题5}
 $$ \because f(x)=\frac{1}{x}=\frac{1}{3+(x-3)}=\frac{1}{3}\cdot\frac{1}{1+\frac{1}{3}(x-3)} $$
 我们可以根据公式$\frac{1}{1+x}=\sum_{n=0}^\infty(-1)^nx^n=1-x+x^2-x^3+\cdots+(-1)^nx^n+\cdots,x\in(-1,1)$进行展开. 
 $$ \therefore f(x) = \sum_{n=0}^\infty
-(-1)^{n} (\frac{1}{3})^{n+1} \cdot (x-3)^{n} $$ 
+(-1)^{n} (\frac{1}{3})^{n+1} \cdot (x-3)^{n}  ,-\frac{x-3}{3}\in(-1,1),$$ 
 
 \newpage
 
@@ -218,7 +228,7 @@ $\therefore $原式=$\frac{5 \sqrt{2} \pi}{3}$
 
 \subsubsection{客观题3}
 高斯公式:$\iiint_{\Omega}(\frac{\partial P}{\partial x}+\frac{\partial Q}{\partial y}+\frac{\partial R}{\partial z})dv=\iint_{\Sigma}Pdydz+Qdzdx+Rdxdy$
-那么有:
+那么有(补平面):
 $$\oint_{\sum-\sum_{1}}2xdydz+3ydzdx+4zdxdy=9\int\int\int_{\omega}dv-16\int\int_{\sum_{1}}dxdy$$
 对于Dxy面投影,有$x^{2}+y^{2}\leq4$
 对于空间$\omega$,有
@@ -234,19 +244,25 @@ $\therefore$ 原式$=8\pi$
 
 \subsection{客观题组3}
 显然,求梯度,再根据单位方向向量计算.
-$$\overrightarrow{\nabla}=\begin{bmatrix}2x\\2y\\2z\end{bmatrix}$$
-$$\overrightarrow{e_{l}}=\frac{l}{|l|}=\begin{bmatrix}\frac{\sqrt{2}}{2}\\-\frac{\sqrt{2}}{2}\\0\end{bmatrix}$$
+$$\overrightarrow{\nabla}=\begin{bmatrix}2x\\2y\\2z\end{bmatrix},
+\overrightarrow{e_{l}}=\frac{l}{|l|}=\begin{bmatrix}\frac{\sqrt{2}}{2}\\-\frac{\sqrt{2}}{2}\\0\end{bmatrix}$$
+$\therefore \cos\alpha=\frac{1}{\sqrt{2}},\cos\beta=\frac{-1}{\sqrt{2}},\cos\gamma=0$
+
 不妨设$\theta,\phi \in [0,2\pi]$:
 $$\begin{cases}x=2\cos\theta\cos \phi\\y=2\cos\theta\sin \phi\\z=2\sin\theta&\end{cases}$$
 代入$\overrightarrow{\nabla}  \cdot \overrightarrow{e_{l}}$得到:
 $$ f(\theta,\phi) = \sqrt{2} cos\theta\cdot (cos \phi - sin \phi )$$
 注意到$ \theta = 0, \phi = \frac{7\pi}{4} $时,最大.解得:
 $$\begin{bmatrix}\sqrt{2} \\ -\sqrt{2} \\0\end{bmatrix}$$
+注意:还有对称的
 
 \newpage
 
 \subsection{证明题}
-显然$\operatorname*{lim}_{n\rightarrow+\infty}a_{n}\neq0$
+因为数列单调递减有下界,所以$\operatorname*{lim}_{n\to\infty}a_{n}=a$
+
+$\operatorname*{lim}_{n\rightarrow+\infty}a_{n} = a > 0$
+
 根据柯西判别式:
 \begin{equation*}
 	\operatorname*{lim}_{n\rightarrow+\infty}\sqrt{(\frac{1}{1+a_{n}})^{n}}=\operatorname*{lim}_{n\rightarrow+\infty}\frac{1}{1+a_{n}}  < 1
